ampliar acerca, corrección validador, nuevo zip

--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -68,14 +68,22 @@
             <h3>Sobre nuestra práctica</h3>
             <p>Para su correcta visualización, es necesario tener <b>acceso a internet</b> para que aparezcan las fuentes de texto y de iconos que hemos seleccionado. De no tenerlo, aparecerán las funtes de texto alternativa y no se verían los iconos.</p>
             <p>Nuestra página web tiene un mínimo de 380px de ancho. De intentar hacer la ventana más pequeña que esa medida, aparecerá una barra de scroll horizontal y no se verá toda la información conforme está diseñada</p>
-            <p>Disponemos de 3 medidas generales para las reglas <b>media query</b>:
+            <p>Disponemos de 3 medidas generales para las reglas <b>media query</b>: </p>
                 <ul>
                     <li><i class="fa-solid fa-right-long"></i> menor de 481px, tamaño móvil</li>
                     <li><i class="fa-solid fa-right-long"></i> entre 481px y 779px, tamaño madiano</li>
                     <li><i class="fa-solid fa-right-long"></i> entre 780px y 864px, tamaño grande</li>
                     <li><i class="fa-solid fa-right-long"></i> entre 865px y 1920px, tamaño muy grande</li>
                 </ul>
+            <p>Está comprobado el correcto funcionamiento de todos los apartados de la práctica en los siguientes navegadores:</p>
+                <ul>
+                    <li><i class="fa-solid fa-right-long"></i>Google Chrome</li>
+                    <li><i class="fa-solid fa-right-long"></i>Microsoft Edge</li>
+                    <li><i class="fa-solid fa-right-long"></i>Firefox</li>
+                </ul>
+               <p> La tipografía se ve diferente en el navegador de Firefox respecto a los demás.
             </p>
+            <p>Los validadores pasan sin ningún error ni warning</p>
         </section>
     </main>
 
