--- a/p2/index.html
+++ b/p2/index.html
@@ -15,8 +15,9 @@
     <title>Index</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/logo.png">
+    <script src="codigo/cod.js"></script>
 </head>
-<body>
+<body onload="navBar();">
     <header>
         <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
         <div> <!-- per a usar inline-flex -->
@@ -28,13 +29,9 @@
     <nav>
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
-        <ul class="menu">
+        <ul class="menu" id="menu">
             <li class="act"><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
-            <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
-            <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-            <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
-            <li><a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a></li>
         </ul>        
     </nav>
 
