--- a/p2/login.html
+++ b/p2/login.html
@@ -14,6 +14,7 @@
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Login</title>
     <link rel="icon" type="image/png" href="img/logo.png">
+    <script src="login.js"></script>
 </head>
 <body>
     <header>
