Campo login añadido. Ho sent molt :c

--- a/p1/registro.html
+++ b/p1/registro.html
@@ -40,7 +40,8 @@
     <main>
         <h2>Regístrate</h2>
         <form>
-            <label>Nombre: <input type="text" name="nombre" pattern="[a-zA-Z]{1}[0-9a-zA-Z]{3,19}" id="nombre" title="Debe contenerun mínimo de 4 caracteres y un máximo de 20 caracteres, siendo estos letras y números. El primer carácter no puede ser un número. No puede contener espacios en blanco." autofocus required></label>
+            <label>Login: <input type="text" name="login" pattern="[a-zA-Z]{1}[0-9a-zA-Z]{3,19}" id="login" title="Debe contenerun mínimo de 4 caracteres y un máximo de 20 caracteres, siendo estos letras y números. El primer carácter no puede ser un número. No puede contener espacios en blanco." autofocus required></label>
+            <label>Nombre: <input type="text" name="nombre" id="nombre" ></label>
             <label>Password: <input type="password" name="contrasenya1" id="contrasenya1" pattern="[a-zA-Z0-9._-]{4,20}" title="Debe contener un mínimo de 4 caracteres y un máximo de 20 caracteres, letras, números y los siguientes caracteres especiales ._- No puede contener espacios en blanco." required></label>
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
