paginació bé (falta comprovar amb + resultats)

--- a/p2/index.html
+++ b/p2/index.html
@@ -45,7 +45,7 @@
             <p>
                 <button class="boton" id="bPrimera">&lt;&lt;</button>
                 <button class="boton" id="bAnterior">&lt;</button>
-                Página <span id="pag"></span> de 6
+                Página <span id="pag"></span> de <span id="totalPags"></span>
                 <button class="boton" id="bSiguiente">&gt;</button>
                 <button class="boton" id="bUltima">&gt;&gt;</button>
             </p>   
@@ -60,7 +60,6 @@
     
 </body>
 <script>
-    let pag = 0;
     getPublicaciones(pag);
 </script>
 </html>
