class="act" bé (per acabar de implementar en tot)

--- a/p2/index.html
+++ b/p2/index.html
@@ -30,7 +30,7 @@
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
         <ul class="menu" id="menu">
-            <li class="act"><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
         </ul>        
     </nav>
