--- a/p2/login.html
+++ b/p2/login.html
@@ -38,7 +38,7 @@
         <h2>Login</h2>
         <form onsubmit="postLogin(event);" method="post">
             <label for="login">Login: <input type="text" name="login" id="login" required autofocus></label> 
-            <label for="pwd">Password: <input type="password" name="psw" id="psw" required></label>
+            <label for="pwd">Password: <input type="password" name="pwd" id="pwd" required></label>
             <input type="submit" value="Entrar" class="boton">   
         </form>
         <p>¿No estás registrado? <a href="registro.html">Regístrate aquí</a></p>
