--- a/p2/buscar.html
+++ b/p2/buscar.html
@@ -26,15 +26,11 @@
     </header>
 
     <nav>
-        <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
+        <label for="chkMenu">&equiv;</label>
         <input type="checkbox" id="chkMenu">
         <ul class="menu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
-            <li class="act"><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
-            <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
-            <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-            <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
-            <li><a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a></li>
+            <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
         </ul>        
     </nav>
 
