script posat en totes les pàgines

--- a/p2/buscar.html
+++ b/p2/buscar.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Buscar</title>
     <link rel="icon" type="image/png" href="img/logo.png">
+    <script src="codigo/cod.js"></script>
 </head>
 <body>
     <header>
