--- a/p2/comun.html
+++ b/p2/comun.html
@@ -15,6 +15,7 @@
     <title>Document</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/logo.png">
+    <script src="codigo/cod.js"></script>
 </head>
 <body>
     <header>
