--- a/p2/login.html
+++ b/p2/login.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="img/logo.png">
     <script src="codigo/cod.js"></script>
 </head>
-<body onload="navBar();">
+<body>
     <header>
         <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
         <div>
