casi + posar descrip a fotos

--- a/p2/publicacion.html
+++ b/p2/publicacion.html
@@ -43,9 +43,18 @@
             <article class="separadors">
                 <h4><i class="fa-solid fa-camera"></i> Fotos</h4>
                 <div class="galeria">
-                    <img src="img/img1_1.jpg" alt="playa">
-                    <img src="img/img1_2.jpg" alt="playa">
-                    <img src="img/img1_3.jpg" alt="playa">
+                    <div>
+                        <img src="img/img1_1.jpg" alt="playa">
+                        <p>hola q tal descrip 1</p>
+                    </div>
+                    <div>
+                        <img src="img/img1_2.jpg" alt="playa">
+                        <p>hola q tal descrip 22222222222</p>
+                    </div>
+                    <div>
+                        <img src="img/img1_3.jpg" alt="playa">
+                        <p>hola q tal descrip 33 aaaaaaaaaaa</p>
+                    </div>
                 </div>
             </article>
         </section>
