Fotos publicacion bien (con boton)

--- a/p2/publicacion.html
+++ b/p2/publicacion.html
@@ -36,26 +36,14 @@
 
     <main>
         <section>
-           <h2>Notícia</h2>
+            <h2>Notícia</h2>
             <article id="publicacion">
                 <!-- <a href="#comentarios">3 comentarios</a> // per a baixar a comentarios -->
             </article> 
             <article class="separadors">
                 <h4><i class="fa-solid fa-camera"></i> Fotos</h4>
-                <div class="galeria">
-                    <div>
-                        <img src="img/img1_1.jpg" alt="playa">
-                        <p>hola q tal descrip 1</p>
-                    </div>
-                    <div>
-                        <img src="img/img1_2.jpg" alt="playa">
-                        <p>hola q tal descrip 22222222222</p>
-                    </div>
-                    <div>
-                        <img src="img/img1_3.jpg" alt="playa">
-                        <p>hola q tal descrip 33 aaaaaaaaaaa</p>
-                    </div>
-                </div>
+                <div class="galeria"></div>
+                <button id="mostrar" class="boton" onclick="mostrarFotos();"><i class="fa-solid fa-eye-slash"></i> Ocultar</button>
             </article>
         </section>
 
