comentarios no logueado funciona

--- a/p2/publicacion.html
+++ b/p2/publicacion.html
@@ -49,14 +49,14 @@
 
         <section id="comentarios">
             <h4><i class="fa-sharp fa-regular fa-comment"></i> Comentarios</h4>
-            <form>
+            <!-- <form>
                 <h4>Deja tu comentario</h4>
                 <textarea maxlength="250"></textarea>
                 <footer class="botonera">
                     <input type="reset" value="Limpiar" class="boton"><input type="submit" value="Enviar" class="boton ko">
                 </footer>
             </form>
-            <p>Tienes que estar logueado para poder dejar un comentario <a href="login.html">Inicia Sesión</a></p>
+            -->
         </section>
     </main>
 
