problemes botons mg i nmg de getPublicacion i postMG

--- a/p2/acerca.html
+++ b/p2/acerca.html
@@ -81,6 +81,8 @@
                <p>La tipografía se ve diferente en el navegador de Firefox respecto a los demás.
             </p>
             <p>Los validadores pasan sin ningún error ni warning</p>
+            <h4>Observaciones</h4>
+            <p>El apartado de <b>publicacion.html</b> relacionado con los botones de "Me gusta" o "No me gusta" no siempre se obtiene el mismo resultado. No termina de estar bien implementado, la petición se envía correctamente pero el desabilitado de los botones no termina de funcionar</p>
         </section>
     </main>
 
