--- a/p2/publicacion.html
+++ b/p2/publicacion.html
@@ -37,9 +37,7 @@
     <main>
         <section>
             <h2>Notícia</h2>
-            <article id="publicacion">
-                <!-- <a href="#comentarios">3 comentarios</a> // per a baixar a comentarios -->
-            </article> 
+            <article id="publicacion"></article> 
             <article class="separadors">
                 <h4><i class="fa-solid fa-camera"></i> Fotos</h4>
                 <div class="galeria"></div>
