--- a/p2/acerca.html
+++ b/p2/acerca.html
@@ -83,6 +83,7 @@
             <p>Los validadores pasan sin ningún error ni warning</p>
             <h4>Observaciones</h4>
             <p>El apartado de <b>publicacion.html</b> relacionado con los botones de "Me gusta" o "No me gusta" no siempre se obtiene el mismo resultado. No termina de estar bien implementado, la petición se envía correctamente pero el desabilitado de los botones no termina de funcionar</p>
+            <p>En <b>buscar.html</b> si hay en la URL parametros de la zona (se ha accedido por el enlace de una publicación) pone la zona en el formulario pero se necesita darle al botón de buscar para que haga la búsqueda (no hemos conseguido que sea automático) y da un Uncaught TypeError por el "evt.preventDefault"</p>
         </section>
     </main>
 
