--- a/p2/registro.html
+++ b/p2/registro.html
@@ -34,7 +34,7 @@
         </ul>        
     </nav>
 
-    <main>
+    <!-- <main>
         <h2>Regístrate</h2>
         <form>
             <label>Nombre: <input type="text" name="nombre" pattern="[a-zA-Z]{1}[0-9a-zA-Z]{3,19}" id="nombre" title="Debe contenerun mínimo de 4 caracteres y un máximo de 20 caracteres, siendo estos letras y números. El primer carácter no puede ser un número. No puede contener espacios en blanco." autofocus required></label>
@@ -45,6 +45,22 @@
            <div class="botonera"> <label class="carpeta  "><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
             <button class="boton ko" type="button"><i class="fa-solid fa-trash-can"></i> </button>
         </div>
+            <input type="submit" class="boton" value="Registrarse">
+        </form>
+    </main> -->
+
+    <main>
+        <h2>Regístrate</h2>
+        <form onsubmit="hacerRegistro(event);" method="POST" id="form_register">
+            <label>Nombre: <input type="text" name="nombre" id="nombre" autofocus required></label>
+            <label id="l_login">Login: <input type="text" name="login" pattern="[a-zA-Z]{1}[0-9a-zA-Z]{3,19}" id="login" onblur="comprueba_log();" title="Debe contenerun mínimo de 4 caracteres y un máximo de 20 caracteres, siendo estos letras y números. El primer carácter no puede ser un número. No puede contener espacios en blanco."  required></label>
+            <label>Password: <input type="password" name="pwd" id="pwd" pattern="[a-zA-Z0-9._-]{4,20}" title="Debe contener un mínimo de 4 caracteres y un máximo de 20 caracteres, letras, números y los siguientes caracteres especiales ._- No puede contener espacios en blanco." required></label>
+            <label>Repita contraseña: <input type="password" name="pwd2" id="pwd2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
+            <label>Email: <input type="email" name="email" required id="email"></label>
+            <label for="img3">Foto: <img src="img/usuvoid.jpg" alt=""></label> <input type="file" id="img3" name="img" class="img" accept="image/*">
+           <div class="botonera"> <label class="carpeta  "><i class="fa-solid fa-folder-open"></i><input type="file" name="foto" id="foto" accept="image/*" class="img" onclick="subirImagen();"> </label>
+                <button class="boton ko" type="button"><i class="fa-solid fa-trash-can"></i> </button>
+            </div>
             <input type="submit" class="boton" value="Registrarse">
         </form>
     </main>
