--- a/p3/index.html
+++ b/p3/index.html
@@ -12,7 +12,7 @@
     <a href="index.html"><img  alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
-        <h2>Busca múltimplos de 5 con estos números y gana a tu rival</h2>
+        <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
     </div>
 </header>
     <main>
