--- a/p3/juego.html
+++ b/p3/juego.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/codigo.js"></script>
     <title>Juego</title>
 </head>
-<body>
+<body onload="cargar();">
     <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
