--- a/p3/index.html
+++ b/p3/index.html
@@ -9,6 +9,7 @@
     <title>NumTris</title>
 </head>
 <body onload="inicio();">
+ <header>   
     <a href="index.html"><img  alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
