--- a/p3/acerca.html
+++ b/p3/acerca.html
@@ -14,28 +14,19 @@
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Acerca</title>
     <link rel="icon" type="image/png" href="img/logo.png">
-    <script src="codigo/cod.js"></script>
+    <script src="js/codigo.js"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
-        <div>
-            <h1>Comunícate</h1>
-            <h2>Tu portal de información local</h2>
+    <header>   
+        <a href="index.html"><img  alt="logotipo" id="logo"></a>
+        <div> <!-- per a usar inline-flex -->
+            <h1>NumTris</h1>
+            <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
         </div>
     </header>
 
-    <nav>
-        <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
-        <input type="checkbox" id="chkMenu">
-        <ul class="menu">
-            <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
-            <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
-        </ul>        
-    </nav>
-
     <main>
-        <h2>Práctica 1</h2>
+        <h2>Práctica 3</h2>
         <h3>Programación del Cliente Web</h3>
         <p>2º curso de Ingeniería Multimedia</p>
         <section>
@@ -79,16 +70,9 @@
                 <li><i class="fa-solid fa-right-long"></i>Firefox</li>
             </ul>
             <p>La tipografía se ve diferente en el navegador de Firefox respecto a los demás.</p>
-            <p>Los validadores pasan sin ningún error</p>
-
-            <h4>Observaciones</h4>
-            <p>El apartado de <b>publicacion.html</b> relacionado con los botones de "Me gusta" o "No me gusta" no siempre se obtiene el mismo resultado. No termina de estar bien implementado, la petición se envía correctamente pero el desabilitado de los botones no termina de funcionar.</p>
-            <p>En publicación tenemos un warning en la etiqueta article con id="publicacion" por falta de un título pero éste se pone en JS ya que necesitamos que se rellene con los parámetros de la solicitud :-)</p>
-            <p>En <b>buscar.html</b> si hay en la URL parametros de la zona (se ha accedido por el enlace de una publicación) pone la zona en el formulario pero se necesita darle al botón de buscar para que haga la búsqueda (no hemos conseguido que sea automático) y da un Uncaught TypeError por el "evt.preventDefault".</p>
-            <p>Para comprobar las contraseñas en <b>registro.html</b> se debe rellenar los campos obligatorios en el formulario y darle el botón de "Enviar".</p>
-            <p>La petición de registro no termina de salir bien, hay algún problema leyendo RESULTADO y aunque registra al usuario en la base de datos, no le asigna token y no sale el resultado esperado.</p>
-        </section>
+        <button onclick="volver();">Volver</button>
     </main>
+   
 
     <footer>
         <p>
