--- a/p3/index.html
+++ b/p3/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="inicio();">
  <header>   
-    <a href="index.html"><img  alt="logotipo" id="logo"></a>
+    <a href="index.html"><img src="./img/numtris.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
         <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
