--- a/p3/juego.html
+++ b/p3/juego.html
@@ -8,7 +8,7 @@
     <title>Juego</title>
 </head>
 <body onload="cargar();">
-    <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
+    <a href="index.html"><img src="img/numtris.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
         <h2>Busca múltimplos de 5 con estos números y gana a tu rival</h2>
