--- a/p3/acerca.html
+++ b/p3/acerca.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>   
-        <a href="index.html"><img  alt="logotipo" id="logo"></a>
+        <a href="index.html"><img src="img/numtris.png" alt="logotipo" id="logo"></a>
         <div> <!-- per a usar inline-flex -->
             <h1>NumTris</h1>
             <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
