--- a/p3/juego.html
+++ b/p3/juego.html
@@ -11,7 +11,7 @@
     <a href="index.html"><img src="img/numtris.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
-        <h2>Busca múltimplos de 5 con estos números y gana a tu rival</h2>
+        <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
     </div>
 </header>
     <main>
