--- a/p3/index.html
+++ b/p3/index.html
@@ -17,8 +17,9 @@
     </div>
 </header>
     <main>
-        <section>
+        <section id="tabla_mensaje">
             <table class="ultimos" id="tabla_ultimos">
+                <caption>Top 10 puntuaciones de hoy </caption>
                 <tr>
                     <th>Posición</th>
                     <th>Usuario</th>
