--- a/p3/index.html
+++ b/p3/index.html
@@ -24,7 +24,12 @@
                     <th>Posición</th>
                     <th>Usuario</th>
                     <th>Puntuación</th>
-                  </tr>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>Pedro</th>
+                    <th>500</th>
+                </tr>
             </table>
         </section>
         <section>
