--- a/p3/juego.html
+++ b/p3/juego.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/estilo.css">
     <script src="js/codigo.js"></script>
     <title>Juego</title>
 </head>
 <body onload="cargar();">
+<header>
     <a href="index.html"><img src="img/numtris.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
@@ -16,7 +18,7 @@
 </header>
     <main>
         <section>
-            <table></table>
+            <h3>¡A jugar!</h3>
         </section>
     </main>
     <footer>
