--- a/p3/acerca.html
+++ b/p3/acerca.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gemma Sellés Lloret y Ana María Soler Guijarro">
-    <link rel="stylesheet" href="estilo/estilo.css">
+    <link rel="stylesheet" href="estilo/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,6 +71,7 @@
             </ul>
             <p>La tipografía se ve diferente en el navegador de Firefox respecto a los demás.</p>
         <button onclick="volver();">Volver</button>
+        </section>
     </main>
    
 
