--- a/p3/juego.html
+++ b/p3/juego.html
@@ -39,10 +39,10 @@
         </section>
         <section>
             <h3>Números disponibles</h3>
-            <div class="cuadrado sombreado" id="1"></div>
-            <div class="cuadrado sombreado" id="2"></div>
-            <div class="cuadrado sombreado" id="3"></div>
-            
+            <div class="cuadrado sombreado" onclick="seleccionar(1)"id="1"></div>
+            <div class="cuadrado sombreado" id="2" onclick="seleccionar(2)"></div>
+            <div class="cuadrado sombreado" id="3" onclick="seleccionar(3)"></div>
+            <button class= "boton"onclick="usar()">Usar ficha seleccionada pruebas</button>
         </section>
 
     </main>
