se colocan fichas

--- a/p3/juego.html
+++ b/p3/juego.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="estilo/style.css">
     <script src="js/codigo.js"></script>
+    <script src="js/juego.js"></script>
     <title>Juego</title>
 </head>
 <body onload="cargar();">
@@ -42,7 +43,6 @@
             <div class="cuadrado sombreado" onclick="seleccionar(1)" id="1"></div>
             <div class="cuadrado sombreado" id="2" onclick="seleccionar(2)"></div>
             <div class="cuadrado sombreado" id="3" onclick="seleccionar(3)"></div>
-            <button class= "boton" onclick="usar()">Usar ficha seleccionada pruebas</button>
         </section>
 
     </main>
