estil llevat flex feo + arreglar barra nav juego

--- a/p2/acerca.html
+++ b/p2/acerca.html
@@ -17,12 +17,13 @@
     <script src="codigo/cod.js"></script>
 </head>
 <body>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Acerca</title>
-    </head>
+    <header>
+        <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
+        <div>
+            <h1>Comunícate</h1>
+            <h2>Tu portal de información local</h2>
+        </div>
+    </header>
 
     <nav>
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
