--- a/p3/acerca.html
+++ b/p3/acerca.html
@@ -13,7 +13,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Acerca</title>
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="img/numtris.png">
     <script src="js/codigo.js"></script>
 </head>
 <body>
@@ -21,7 +21,7 @@
         <a href="index.html"><img src="img/numtris.png" alt="logotipo" id="logo"></a>
         <div> <!-- per a usar inline-flex -->
             <h1>NumTris</h1>
-            <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
+            <h2>Busca múltiplos de 5 y gana a tu rival</h2>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
         <section>
             <h3>Sobre nuestra práctica</h3>
             <p>Para su correcta visualización, es necesario tener <b>acceso a internet</b> para que aparezcan las fuentes de texto y de iconos que hemos seleccionado. De no tenerlo, aparecerán las funtes de texto alternativa y no se verían los iconos.</p>
-            <p>Nuestra página web tiene un mínimo de 380px de ancho. De intentar hacer la ventana más pequeña que esa medida, aparecerá una barra de scroll horizontal y no se verá toda la información conforme está diseñada</p>
+            <p>Nuestra página web tiene un mínimo de 380px de ancho. De intentar hacer la ventana más pequeña que esa medida, aparecerá una barra de scroll horizontal y no se verá toda la información conforme está diseñada.</p>
             <p>Disponemos de 3 medidas generales para las reglas <b>media query</b>: </p>
                 <ul>
                     <li><i class="fa-solid fa-right-long"></i> menor de 481px, tamaño móvil</li>
@@ -70,7 +70,9 @@
                 <li><i class="fa-solid fa-right-long"></i>Firefox</li>
             </ul>
             <p>La tipografía se ve diferente en el navegador de Firefox respecto a los demás.</p>
-        <button onclick="volver();">Volver</button>
+            <h4>Observaciones</h4>
+            <p>No tenemos ninguna observación especial</p>
+            <button onclick="volver();" class="boton">Volver</button>
         </section>
     </main>
    
