--- a/p3/index.html
+++ b/p3/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gemma Sellés Lloret y Ana María Soler Guijarro">
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="stylesheet" href="estilo/formularios.css">
-    
-    <script src="js/codigo.js"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>
     <title>NumTris</title>
+    <link rel="icon" type="image/png" href="img/numtris.png">
+    <script src="js/codigo.js"></script>
 </head>
 <body onload="inicio();">
  <header>   
     <a href="index.html"><img src="./img/numtris.png" alt="logotipo" id="logo"></a>
     <div> <!-- per a usar inline-flex -->
         <h1>NumTris</h1>
-        <h2>Busca múltiplos de 5 con estos números y gana a tu rival</h2>
+        <h2>Busca múltiplos de 5 y gana a tu rival</h2>
     </div>
 </header>
     <main>
