--- a/p3/juego.html
+++ b/p3/juego.html
@@ -48,9 +48,11 @@
             <canvas id="tablero"></canvas>
             <div id="fichas">
                 <h3>Números disponibles</h3>
-                <div class="cuadrado sombreado" onclick="seleccionar(1)" id="1"></div>
-                <div class="cuadrado sombreado" id="2" onclick="seleccionar(2)"></div>
-                <div class="cuadrado sombreado" id="3" onclick="seleccionar(3)"></div>
+                <div class="numeros">
+                    <div class="cuadrado sombreado" onclick="seleccionar(1)" id="1"></div>
+                    <div class="cuadrado sombreado" id="2" onclick="seleccionar(2)"></div>
+                    <div class="cuadrado sombreado" id="3" onclick="seleccionar(3)"></div>
+                </div>
             </div>
         </section>
     </main>
