--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script src="js/codigo.js"></script>
     <script src="js/canvas.js"></script>
-    
+
     <!-- Google Fonts -->
     <!--  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
@@ -64,6 +64,9 @@
             </form>   
         </section>
 
+        <!-- DIALOG -->
+        <button onclick="modal()">Modal</button>
+
         <!-- CANVAS -->
         <section id="g-canvas">
             <article>
@@ -90,7 +93,7 @@
 
     </main>
 
-    <footer>
+    <footer id="g-footer">
         <h3>DNI - Alumne</h3>
         <p>Examen <abbr title="Programación del Cliente Web">PCW</abbr> - Convocatoria C3 &copy;</p>
         <p><time datatime="2023-06-08">Jueves, 8 de junio 2023</time></p>
